[package]
name = "xalkidiki"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "./README.md"
description = "Game"
repository = "https://github.com/TuntematonSotilas/xalkidiki"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.11.2"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "Document", "Element"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']