[package]
name = "island_explore"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "./README.md"
description = "Game"
repository = "https://github.com/TuntematonSotilas/island_explore"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.11.2", features = [ "png" ] }
seldom_pixel = { version = "0.4.0", features = ["map"] }
bevy_ecs_tilemap = { version = "0.11", default-features = false }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "Document", "Element"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']