[package]
name = "island_explore"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "./README.md"
description = "Game"
repository = "https://github.com/TuntematonSotilas/island_explore"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.13.2", features = ["png"] }
seldom_pixel = "0.6.0"
seldom_map_nav = { version = "0.6.1", features = ["wasm"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Window", "Document", "Element"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']